FIXED dark-scheme not being applied on dark mode ,,,, UPDATED gradient ui start color opacity

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,11 +51,9 @@
   font-display: swap;
 }
 
-@layer base {
-  .dark {
-    color-scheme: dark;
-  }
-}
+/* @layer base {
+  
+} */
 
 #nprogress .spinner {
   display: none !important;
@@ -63,4 +61,8 @@
 
 #nprogress .bar {
   @apply rounded-sm;
+}
+
+.dark {
+  color-scheme: dark;
 }
